@@ -11,6 +11,7 @@ Bug Fixes
 - Fix backpack disappearing into itself.
     - Fix via moving from button upgrade via opening via right click
     - Fix via mouse wheel scrolling
+    - Fix via using number keys to swap hotbar slots
 ------------------------------------------------------
 Version 1.10.2 - 2.2.26
 ------------------------------------------------------
